# anchor-idl-to-ts

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  converters.rs  helpers.rs  main.rs
